apps/kubernetes/k3s/apps/fasten-health/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fasten-health
  namespace: fasten-health
spec:
  selector:
    app: fasten-health
  ports:
    - name: http
      port: 8080
      targetPort: 8080
