apps/kubernetes/k3s/apps/fasten-health/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: fasten-health
  namespace: fasten-health
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`fastenhealth.hughboi.cc`)
      kind: Rule
      services:
        - name: fasten-health
          port: 8080
  tls:
    secretName: hughboi-tls
